# synthea-to-omop-fhir

./: .coverage  .env.example  .gitignore  Makefile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dbt/omop_cdm/: dbt_project.yml  profiles.yml
dbt/omop_cdm/macros/: generate_schema_name.sql
dbt/omop_cdm/models/marts/: _omop.yml  condition_occurrence.sql  death.sql  drug_exposure.sql  measurement.sql  observation.sql  observation_period.sql  person.sql  procedure_occurrence.sql  visit_occurrence.sql
dbt/omop_cdm/models/staging/: _sources.yml  stg_person.sql  stg_visit.sql
docker/: Dockerfile  entrypoint.sh  hapi-fhir.yml
docs/: architecture.md  deployment_sovereign.md  governance_rgpd_hds.md  omop_mapping.md  rag_integration.md
infra/terraform/: README.md  main.tf  providers.tf  user-data.sh  variables.tf
scripts/: apply_stcm.py  generate_synthea.sh
synthea_omop_fhir/: __init__.py  config.py  db.py  load_bronze.py  logging_config.py  sql.py
synthea_omop_fhir/agent/: __init__.py  agent.py  cli.py  llm.py
synthea_omop_fhir/api/: __init__.py  dependencies.py  errors.py  main.py  metrics.py
synthea_omop_fhir/cohort/: __init__.py  builder.py
synthea_omop_fhir/fhir/: __init__.py  export.py  push.py
synthea_omop_fhir/quality/: __init__.py  run.py
tests/: test_agent.py  test_agent_cli.py  test_api.py  test_cohort.py  test_db.py  test_fhir.py  test_fhir_push.py  test_llm.py  test_load_bronze.py  test_logging.py  test_quality.py
