[project]
name = "synthea-omop-fhir"
version = "0.1.0"
description = "Synthea -> OMOP CDM -> FHIR: a governed, sovereign health-data pipeline (research + interoperability)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.116.0",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "fhir-resources>=8.3.0",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "pandas>=2.3.3",
    "pandera[pandas]>=0.32.1",
    "prometheus-client>=0.21.0",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.59.0",
    "uvicorn>=0.50.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.1.1",
    "pytest-cov>=6.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
